# network_comm_lib

./: CMakeLists.txt  README.md
include/: mosquittohandler.h  rest_api.h
src/: main.cpp  mosquittohandler.cpp  rest_api.cpp
